fix: adjust validations and column definitions
