# docs/swagger.json
@@ -261,7 +261,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.User"
+                            "$ref": "#/definitions/entity.RegistrationUser"
                         }
                     }
                 ],
@@ -305,16 +305,14 @@
             "properties": {
                 "account": {
                     "type": "string",
-                    "maxLength": 10,
-                    "minLength": 6
+                    "maxLength": 20,
+                    "minLength": 8
                 },
                 "newPassword": {
-                    "type": "string",
-                    "minLength": 8
+                    "type": "string"
                 },
                 "password": {
-                    "type": "string",
-                    "minLength": 8
+                    "type": "string"
                 }
             }
         },
@@ -327,12 +325,11 @@
             "properties": {
                 "account": {
                     "type": "string",
-                    "maxLength": 10,
-                    "minLength": 6
+                    "maxLength": 20,
+                    "minLength": 8
                 },
                 "password": {
-                    "type": "string",
-                    "minLength": 8
+                    "type": "string"
                 }
             }
         },
@@ -343,6 +340,14 @@
                     "type": "string"
                 },
                 "token": {
+                    "type": "string"
+                }
+            }
+        },
+        "entity.Date": {
+            "type": "object",
+            "properties": {
+                "time.Time": {
                     "type": "string"
                 }
             }
@@ -361,6 +366,48 @@
             "properties": {
                 "password": {
                     "type": "string"
+                }
+            }
+        },
+        "entity.RegistrationUser": {
+            "type": "object",
+            "required": [
+                "account",
+                "birthday",
+                "gender",
+                "mailAddress",
+                "name"
+            ],
+            "properties": {
+                "account": {
+                    "type": "string",
+                    "maxLength": 20,
+                    "minLength": 8
+                },
+                "birthday": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string",
+                    "enum": [
+                        "Male",
+                        "Female",
+                        "Unknown"
+                    ]
+                },
+                "mailAddress": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 50
+                },
+                "role": {
+                    "type": "string",
+                    "enum": [
+                        "Administrator",
+                        "General"
+                    ]
                 }
             }
         },
@@ -383,17 +430,15 @@
         },
         "entity.User": {
             "type": "object",
-            "required": [
-                "account",
-                "mailAddress",
-                "name",
-                "sex"
-            ],
             "properties": {
                 "account": {
-                    "type": "string",
-                    "maxLength": 10,
-                    "minLength": 6
+                    "type": "string"
+                },
+                "birthday": {
+                    "$ref": "#/definitions/entity.Date"
+                },
+                "gender": {
+                    "type": "string"
                 },
                 "id": {
                     "type": "integer"
@@ -402,13 +447,9 @@
                     "type": "string"
                 },
                 "name": {
-                    "type": "string",
-                    "maxLength": 50
-                },
-                "role": {
                     "type": "string"
                 },
-                "sex": {
+                "role": {
                     "type": "string"
                 }
             }
